Revert "Upgrade mockito to v4.7.0"
Revert submission 32383360-mockito4_7

Reason for revert: Potential culprit for  b/405939488  - verifying through ABTD before revert submission. This is part of the standard investigation process, and does not mean your CL will be reverted>

Reverted changes: /q/submissionid:32383360-mockito4_7

Change-Id: If3dd522ff3fdbdb42823c7b67754b6177d58dde7