@@ -6,8 +6,9 @@ package org.mockito.internal.invocation;
 
 import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import org.mockito.internal.util.collections.ListUtil;
+import org.mockito.internal.util.collections.ListUtil.Filter;
 import org.mockito.internal.verification.api.InOrderContext;
 import org.mockito.invocation.Invocation;
 import org.mockito.invocation.Location;
@@ -19,7 +20,7 @@ public class InvocationsFinder {
 
     public static List<Invocation> findInvocations(
             List<Invocation> invocations, MatchableInvocation wanted) {
-        return invocations.stream().filter(wanted::matches).collect(Collectors.toList());
+        return ListUtil.filter(invocations, new RemoveNotMatching(wanted));
     }
 
     public static List<Invocation> findAllMatchingUnverifiedChunks(
@@ -27,7 +28,7 @@ public class InvocationsFinder {
             MatchableInvocation wanted,
             InOrderContext orderingContext) {
         List<Invocation> unverified = removeVerifiedInOrder(invocations, orderingContext);
-        return unverified.stream().filter(wanted::matches).collect(Collectors.toList());
+        return ListUtil.filter(unverified, new RemoveNotMatching(wanted));
     }
 
     /**
@@ -126,13 +127,13 @@ public class InvocationsFinder {
 
     public static Invocation findPreviousVerifiedInOrder(
             List<Invocation> invocations, InOrderContext context) {
-        List<Invocation> verifiedOnly =
-                invocations.stream().filter(context::isVerified).collect(Collectors.toList());
+        LinkedList<Invocation> verifiedOnly =
+                ListUtil.filter(invocations, new RemoveUnverifiedInOrder(context));
 
         if (verifiedOnly.isEmpty()) {
             return null;
         } else {
-            return verifiedOnly.get(verifiedOnly.size() - 1);
+            return verifiedOnly.getLast();
         }
     }
 
@@ -155,6 +156,32 @@ public class InvocationsFinder {
             locations.add(invocation.getLocation());
         }
         return locations;
+    }
+
+    private static class RemoveNotMatching implements Filter<Invocation> {
+        private final MatchableInvocation wanted;
+
+        private RemoveNotMatching(MatchableInvocation wanted) {
+            this.wanted = wanted;
+        }
+
+        @Override
+        public boolean isOut(Invocation invocation) {
+            return !wanted.matches(invocation);
+        }
+    }
+
+    private static class RemoveUnverifiedInOrder implements Filter<Invocation> {
+        private final InOrderContext orderingContext;
+
+        public RemoveUnverifiedInOrder(InOrderContext orderingContext) {
+            this.orderingContext = orderingContext;
+        }
+
+        @Override
+        public boolean isOut(Invocation invocation) {
+            return !orderingContext.isVerified(invocation);
+        }
     }
 
     /**
